--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "com.unity.2d.enhancers": "1.0.0",
+    "com.unity.ai.assistant": "1.5.0-pre.1",
+    "com.unity.ai.generators": "1.5.0-pre.1",
+    "com.unity.ai.inference": "2.4.1",
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.inputsystem": "1.17.0",
